--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+
+/* CSS resets */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  width: 90%;
   min-height: 100vh;
+  margin: 0 auto;
+  padding-top: 85px;
+}
+
+.search-header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: 80px;
+
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 90%;
+  background-color: rgb(189, 216, 243);
+  padding-inline: 1em;
 }
 
-.App-link {
-  color: #61dafb;
+.search-header__input {
+  height: 30px;
+  width: 250px;
+  margin-right: 1em;
+  border-radius: 5px;
+  padding: 0.5em;
+  outline: none;
+  border: 1px solid rgb(255, 160, 160);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.search-header__icon {
+  fill: rgb(253, 110, 110);
+  cursor: pointer;
+}
+
+.search-header__results-display {
+  display: none;
+}
+
+.results-flex {
+  display: flex;
+  margin-left: 5em;
+}
+
+.results-flex .result {
+  margin-right: 1em;
+}
+
+.search-header__loading-animation-div {
+  display: none;
+}
+
+.search-header__loading {
+  display: flex;
+  justify-content: center;
+  margin-left: 5em;
+}
+
+.search-header__loading::after {
+  content: '';
+  width: 30px;
+  height: 30px;
+  border: 5px solid #dddddd;
+  border-top-color: #009579;
+  border-radius: 50%;
+  animation: loading 0.7s linear infinite;
+}
+
+@keyframes loading {
   to {
-    transform: rotate(360deg);
+    transform: rotate(1turn);
+  }
+}
+
+.albums-container {
+  width: 100%;
+  /* height: 200vh; */
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.albums-container__h2 {
+  padding: 0;
+  padding-top: 2em;
+  margin: 0 auto;
+  height: fit-content;
+  color: rgb(10, 32, 53);
+  border-bottom: 2px solid rgb(126, 170, 211);
+}
+
+@media (max-width: 500px) {
+  body {
+    width: 95%;
+  }
+
+  .search-header {
+    width: 95%;
   }
 }
