--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,113 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+/* CSS resets */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 90%;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding-top: 85px;
+}
+
+.search-header {
+  display: flex;
+  height: 80px;
+
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 90%;
+  background-color: rgb(189, 216, 243);
+  padding-inline: 1em;
+}
+
+.search-header__input {
+  height: 30px;
+  width: 250px;
+  margin-right: 1em;
+  border-radius: 5px;
+  padding: 0.5em;
+  outline: none;
+  border: 1px solid rgb(255, 160, 160);
+}
+
+.search-header__icon {
+  fill: rgb(253, 110, 110);
+  cursor: pointer;
+}
+
+.search-header__results-display {
+  display: none;
+}
+
+.results-flex {
+  display: flex;
+  margin-left: 5em;
+}
+
+.results-flex .result {
+  margin-right: 1em;
+}
+
+.search-header__loading-animation-div {
+  display: none;
+}
+
+.search-header__loading {
+  display: flex;
+  justify-content: center;
+  margin-left: 5em;
+}
+
+.search-header__loading::after {
+  content: '';
+  width: 30px;
+  height: 30px;
+  border: 5px solid #dddddd;
+  border-top-color: #009579;
+  border-radius: 50%;
+  animation: loading 0.7s linear infinite;
+}
+
+@keyframes loading {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+.albums-container {
+  width: 100%;
+  /* height: 200vh; */
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.albums-container__h2 {
+  padding: 0;
+  padding-top: 2em;
+  margin: 0 auto;
+  height: fit-content;
+  color: rgb(10, 32, 53);
+  border-bottom: 2px solid rgb(126, 170, 211);
+}
+
+@media (max-width: 500px) {
+  body {
+    width: 95%;
+  }
+
+  .search-header {
+    width: 95%;
+  }
 }
